<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#F5F5F5">

        <TextView
            android:id="@+id/tituloseno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="16dp"
            android:text="@string/app_name"
            android:textColor="#008CB9"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <Button
                android:id="@+id/btnseno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:backgroundTint="#008CB9"
                android:text="@string/calculadora_seno" />

            <Button
                android:id="@+id/btncoseno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:backgroundTint="#008CB9"
                android:text="@string/calculadora_coseno" />

            <Button
                android:id="@+id/btnraiz"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:backgroundTint="#008CB9"
                android:text="@string/calculadora_raiz" />

            <Button
                android:id="@+id/btnperimetro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#008CB9"
                android:text="@string/calculadora_perimetro" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>